# escalada-core

./: .gitignore  CODEX_PROMPT_CONTEST_TRANSITIONS_FIX.md  CODEX_PROMPT_CORE_STABILIZATION.md  IMPLEMENTATION_PLAN.md  LEAD_RANKING_DEV_NOTE.md  README.md  copilot-instructions.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
escalada_core/: __init__.py  contest.py  lead_ranking.py  types.py  validation.py
tests/: test_core_contest.py  test_lead_ranking.py
