[project]
name = "escalada-core"
version = "0.1.0"
description = "Escalada core contest logic (pure, no FastAPI/DB)."
authors = [{ name = "Silviu" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = ["pydantic (>=2.0.0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
pythonpath = ["."]
